feat(config): 添加禁用/dev/shm共享内存配置选项
- 新增 disableDevShmUsage 配置项，默认值为 true
- 在 PlaywrightConfig 中添加 --disable-dev-shm-usage 启动参数
- 更新 equals 和 hashCode 方法以包含新配置项
- 添加相关单元测试验证默认值和功能
- 修复测试中获取列表元素的方法调用
- 添加抑制繁忙等待警告的注解